6591247: C2 cleans up the merge point too early during SplitIf

Remove region self reference last

Reviewed-by: kvn, never